--- a/client/src/components/topBar/topbar.css
+++ b/client/src/components/topBar/topbar.css
@@ -92,7 +92,7 @@
   /* background-color: var(--bg-secondary-color); */
   background-color: #f6f6f6;
   outline: none;
-
+  width: 80%;
   /* border: 1px solid black; */
 }
 
