--- a/client/src/components/post/classic.css
+++ b/client/src/components/post/classic.css
@@ -1,13 +1,61 @@
 .classic-container {
-  max-height: 300px;
-  overflow-y: scroll;
+  max-height: 500px;
+  /* max-width: 90vw; */
+  /* overflow-y: scroll; */
   height: fit-content;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 5%;
   /* border: 1px solid black; */
 }
 
+.post-image-container {
+  flex-grow: 0;
+  /* margin-right: 10%; */
+  /* max-height: 80%; */
+  /* height: 70%; */
+  /* margin: auto; */
+}
+
 .post-image {
-  max-width: 80%;
+  /* aspect-ratio: 1 / 1; */
   margin: 0 1.5rem;
-  /* border: 1px solid blue; */
-  max-height: 70%;
+  /* max-height: 50%; */
+  object-fit: contain;
+  height: 300px;
+}
+.post-description {
+  flex-grow: 0;
+  text-align: left;
+  max-width: 45%;
+  align-self: flex-start;
+  /* border: 1px solid black; */
+}
+
+.decription-title {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* padding: 10px 0; */
+  /* gap: 15px; */
+}
+.decription-title span {
+  font-weight: 400;
+  color: rgb(61, 58, 58);
+}
+
+@media screen and (max-width: 730px) {
+  .classic-container {
+    /* width: 90vw; */
+    flex-direction: column;
+  }
+  .post-description {
+    max-width: 100%;
+  }
+  .decription-title {
+    /* flex-direction: column; */
+    /* align-self: flex-start; */
+    display: none;
+  }
 }
