--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@ html {
 .container {
   /* width: 75%; */
   /* margin: 0 auto; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 body {
