--- a/client/src/components/post/table.css
+++ b/client/src/components/post/table.css
@@ -1,10 +1,13 @@
 .table-container {
   max-height: 300px;
   overflow-y: scroll;
+
   /* background-color: red; */
 }
 
 .table-title {
   position: sticky;
   top: 0;
+  background-color: aliceblue;
+  z-index: 10;
 }
