--- a/client/src/components/profilePage/my-recepies/big-recipe/recipezoom.css
+++ b/client/src/components/profilePage/my-recepies/big-recipe/recipezoom.css
@@ -1,15 +1,19 @@
 .title-confirm-recipe {
   padding: 5px;
   margin: auto;
-  max-width: 80vw !important;
-  max-height: 70vh;
+  height: fit-content;
+  min-height: 90vh !important;
+  /* width: 80vw !important; */
+  /* max-width: 80vw !important; */
+  /* max-height: 70vh; */
 
   /* background-color: red; */
 }
 
 .title-confirm-recipe h1 {
   margin: 15px auto;
-  padding: 5px;
+  padding: 5px 0px 5px 15px;
+  text-align: center;
   width: 95%;
   border-radius: 10px;
   background-color: var(--bg-navbar-color);
@@ -20,24 +24,16 @@
 
 .confirm-container {
   display: flex;
-  /* margin-top: 0rem; */
-  /* min-height: 55rem; */
   justify-content: space-between;
-  gap: 1rem;
+  /* gap: 1rem; */
   padding: 3px;
   width: 95%;
-  max-height: 45vh;
   margin: 10px auto;
-  min-width: fit-content;
   background-color: aliceblue;
   position: relative;
   overflow-y: scroll;
-  /* height: 100vh; */
-  /* overflow-y: scroll; */
-  /* flex-direction: column; */
-  /* width: 100vw; */
-  /* height: 100vh; */
-  /* overflow-y: scroll; */
+  min-height: 50vh;
+  border-radius: 10px;
 }
 
 .close-btn {
@@ -53,20 +49,22 @@
   transform: scale(0.95);
 }
 
-.ingredient-confirm {
+.ingredient-confirm-big {
   display: flex;
   /* flex: 1; */
   flex-direction: column;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 5px;
   width: 30%;
-  margin-left: 1rem;
+
   height: fit-content;
   position: sticky;
   top: 0;
+  cursor: pointer;
 }
 
-.instructions-confirm {
+.instructions-confirm-big {
+  cursor: pointer;
   width: 50%;
   /* flex: 5; */
   display: flex;
@@ -84,7 +82,7 @@
 }
 
 .instruction-row-confirm {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 5px;
   position: relative;
   /* min-height: 2rem; */
@@ -105,18 +103,42 @@
 
 .ingredient-row-confirm {
   padding: 1rem;
-  border-bottom: black 1px dotted;
+  /* border-bottom: black 1px dotted; */
 }
 
 #edit-delete {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 80%;
   margin-left: 10%;
 }
 
-.recipe-image {
+.recipe-image-zoom {
   width: 20%;
   height: 30%;
   position: sticky;
   top: 0;
+}
+
+@media screen and (max-width: 730px) {
+  .confirm-container {
+    flex-direction: column-reverse;
+    border: 1px solid black;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .instructions-confirm-big,
+  .ingredient-confirm-big {
+    border: none;
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  .recipe-image-zoom {
+    /* justify-self: flex-start; */
+    /* width: fit-content; */
+    width: 90%;
+    /* align-self: flex-start; */
+    margin: 0 auto;
+  }
 }
