--- a/client/src/components/profilePage/add-recipe/addIngredients/ingredientadd.css
+++ b/client/src/components/profilePage/add-recipe/addIngredients/ingredientadd.css
@@ -13,6 +13,18 @@
 .ingredients-recipe {
   margin: auto;
   width: 100%;
+  /* border: 1px solid black; */
+  /* overflow: -moz-hidden-unscrollable; */
   /* box-shadow: var(); */
   /* box-shadow: 0px 2rem 3rem rgba(0, 0, 0, 0.2); */
+}
+.ingredient-container {
+  /* border: 1px solid black; */
+  /* overflow: hidden; */
+  padding: 0;
+}
+
+.instructions-container {
+  /* border: 1px solid black; */
+  padding: 0;
 }
