--- a/client/src/components/post/accordion.css
+++ b/client/src/components/post/accordion.css
@@ -1,7 +1,9 @@
 .accordion-container {
   /* height: 100%; */
-  max-height: 300px;
+  max-height: 100%;
+  max-width: 90%;
   overflow-y: scroll;
+  margin: 0 auto;
 }
 .accordion-item {
   border: 1px solid black;
