--- a/client/src/components/post/accordion.css
+++ b/client/src/components/post/accordion.css
@@ -1,9 +1,13 @@
 .accordion-container {
-  /* height: 100%; */
-  max-height: 100%;
+  height: 100%;
+  /* min-height: 300px; */
+  max-height: 500px;
   max-width: 90%;
   overflow-y: scroll;
-  margin: 0 auto;
+  margin: 10px auto;
+  /* padding: 30px 0; */
+  /* scroll-behavior: smooth; */
+  /* border: 1px solid red; */
 }
 .accordion-item {
   border: 1px solid black;
