--- a/client/src/components/post/classic.css
+++ b/client/src/components/post/classic.css
@@ -1,5 +1,6 @@
 .classic-container {
   max-height: 500px;
+  width: 100%;
   /* max-width: 90vw; */
   /* overflow-y: scroll; */
   height: fit-content;
@@ -23,9 +24,10 @@
   /* max-width: 45%; */
   align-self: flex-start;
   /* border: 1px solid black; */
-  max-width: 90%;
+  max-width: 60%;
   text-align: center;
   margin: 1rem;
+  /* height: fit-content; */
 }
 .description-content {
   text-align: left;
