--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -24,9 +24,6 @@
   .star-svg {
     width: 20px;
   }
-  .post-image-container {
-    margin: 0;
-  }
 }
 
 /* PC */
@@ -109,6 +106,7 @@
   justify-content: space-around;
   border-top: 0.5px solid var(--weak-line-color);
   border-bottom: 0.5px solid var(--weak-line-color);
+  margin-top: 10px;
 }
 
 .like-comment-counter {
@@ -120,10 +118,26 @@
   display: flex;
   /* align-items: center; */
   justify-content: center;
+  align-items: center;
   /* position: relative; */
   padding-top: 5px;
   height: fit-content;
   /* background-color: red; */
+}
+.post-title {
+  display: flex;
+  /* margin-left: 20%; */
+  align-items: center;
+  /* border: 1px solid black; */
+}
+
+.post-title h1 {
+  font-size: 3rem;
+}
+.post-title span {
+  font-weight: 400;
+  color: rgb(61, 58, 58);
+  margin: 0 15px;
 }
 
 /* stars */
@@ -132,6 +146,7 @@
   margin: 0 20px;
   justify-self: flex-start;
   /* border: 1px solid black; */
+
   position: relative;
 }
 
@@ -166,7 +181,7 @@
 .title-catagroy-container {
   display: flex;
   align-items: center;
-  padding: 14px 0;
+  /* padding: 14px 0; */
   margin: 0 auto;
   padding: 5px 0;
   /* overflow: hidden; */
