--- a/client/src/components/post/table.css
+++ b/client/src/components/post/table.css
@@ -1,5 +1,6 @@
 .table-container {
-  max-height: 100%;
+  /* max-height: 100%; */
+  max-height: 350px;
   /* max-width: 85%; */
   overflow-y: scroll;
   /* min-height: 400px; */
