--- a/client/src/components/profilePage/add-recipe/addHelp/help.css
+++ b/client/src/components/profilePage/add-recipe/addHelp/help.css
@@ -1,7 +1,7 @@
 .help-container {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 60%;
   -ms-transform: translate(-50%, -50%);
@@ -12,6 +12,7 @@
   border-radius: 5px;
   background-color: aliceblue;
   width: fit-content;
+  z-index: 999999999999999999;
 }
 
 .close-container {
