--- a/client/src/components/profilePage/my-posts/myposts.css
+++ b/client/src/components/profilePage/my-posts/myposts.css
@@ -148,3 +148,10 @@
 .btn-primary:hover {
   background-color: aliceblue;
 }
+
+.user-meta-title {
+  display: flex;
+  /* border: 1px solid black; */
+  /* width: 100%; */
+  justify-content: space-between;
+}
