--- a/client/src/components/profilePage/my-recepies/big-recipe/recipezoom.css
+++ b/client/src/components/profilePage/my-recepies/big-recipe/recipezoom.css
@@ -1,27 +1,49 @@
 .title-confirm-recipe {
-  padding: 5px;
-  margin: auto;
+  /* padding: 0 5px; */
+  width: 100%;
+  margin: 0 auto;
   height: fit-content;
-  min-height: 90vh !important;
-  /* width: 80vw !important; */
-  /* max-width: 80vw !important; */
-  /* max-height: 70vh; */
-
-  /* background-color: red; */
+  min-height: 100vh !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* border: 1px solid black; */
+  background-color: white;
 }
+/* 
+.title-confirm-recipe h1:first-child {
+  position: sticky;
+  top: 0;
+} */
 
 .title-confirm-recipe h1 {
-  margin: 15px auto;
+  /* margin: 15px auto; */
+  align-self: flex-start;
+  justify-self: flex-start;
   padding: 5px 0px 5px 15px;
   text-align: center;
-  width: 95%;
+  width: 100%;
   border-radius: 10px;
   background-color: var(--bg-navbar-color);
   box-shadow: 20px 20px 50px 10px pink inset;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(40, 38, 38);
+}
+.title-confirm-recipe h1 div:first-child {
+  width: 99%;
+  height: 5px;
 }
 
+.title-confirm-recipe #recipe-title-zoom {
+  width: fit-content;
+  /* text-align: right; */
+  padding: 5px 10px;
+  margin: 0 auto;
+
+  /* border: black 1px solid; */
+}
 .confirm-container {
   display: flex;
   justify-content: space-between;
@@ -32,7 +54,7 @@
   background-color: aliceblue;
   position: relative;
   overflow-y: scroll;
-  min-height: 50vh;
+  /* min-height: 70vh; */
   border-radius: 10px;
 }
 
@@ -45,47 +67,37 @@
 }
 
 .close-btn:hover {
-  /* background: white; */
   transform: scale(0.95);
 }
 
-.ingredient-confirm-big {
+.ingredient-confirm-big,
+.instructions-confirm-big {
   display: flex;
-  /* flex: 1; */
   flex-direction: column;
-  /* border: 1px solid black; */
-  border-radius: 5px;
-  width: 30%;
-
-  height: fit-content;
-  position: sticky;
-  top: 0;
   cursor: pointer;
+  line-height: 2rem;
+  margin: 0rem 1rem;
+  border-radius: 5px;
+  /* height: fit-content; */
+}
+
+.ingredient-confirm-big {
+  width: 15%;
+  /* border: 1px solid black; */
 }
 
 .instructions-confirm-big {
-  cursor: pointer;
-  width: 50%;
-  /* flex: 5; */
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  margin: 0 2rem;
-  padding: 5px;
+  width: 40%;
   text-align: left;
   line-height: 3rem;
-  /* position: sticky; */
-  top: 0;
-  /* height: 300px; */
-  /* overflow-y: scroll; */
-  /* padding-left: 3rem; */
+  /* border: 1px solid black; */
+  gap: 3rem;
 }
 
 .instruction-row-confirm {
-  /* border: 1px solid black; */
   border-radius: 5px;
   position: relative;
-  /* min-height: 2rem; */
+  padding: 4px;
 }
 
 .float-step-num {
@@ -102,21 +114,26 @@
 }
 
 .ingredient-row-confirm {
-  padding: 1rem;
+  /* padding: 1rem; */
   /* border-bottom: black 1px dotted; */
 }
 
 #edit-delete {
-  /* border: 1px solid black; */
   width: 80%;
   margin-left: 10%;
 }
 
 .recipe-image-zoom {
-  width: 20%;
-  height: 30%;
-  position: sticky;
-  top: 0;
+  /* border: 1px solid black; */
+  box-shadow: var(--box-shadow-primary);
+  /* width: 20%; */
+  align-self: center;
+  /* height: 100%; */
+  max-height: 500px;
+  border-radius: 5px;
+  margin: 15px 0 !important;
+  /* position: sticky; */
+  /* top: 0; */
 }
 
 @media screen and (max-width: 730px) {
